--- a/index.html
+++ b/index.html
@@ -9,36 +9,39 @@
 
 <p align="center"><b><font size="5">wiku30's </font></b><font size="5"><b>
 Homepage</b></font></p>
-<p align="left" style="text-indent: 40px"><font face="等线 Light" color="#0000FF">
+<p align="left" style="text-indent: 40px">
+<font face="Microsoft YaHei UI Light" color="#0000FF">
 Welcome to my homepage!</font></p>
-<p align="left" style="text-indent: 40px"><font face="等线 Light">I am in Tsinghua 
+<p align="left" style="text-indent: 40px"><font face="Microsoft YaHei UI Light">I am in Tsinghua 
 University, but the alias &quot;wiku30&quot; dates back to days of OI in senior high as an 
 MO contestant. It means &quot;winged kuriboh&quot;, a sprite card in the old-fashioned 
 card game Yu-Gi-Oh. More impressively, it is a symbol of those bygone years when 
 I began to develop my interest in computer science, along with those unusual 
 experiences in both groups.</font></p>
-<p align="left" style="text-indent: 40px"><font face="等线 Light">Life has changed 
+<p align="left" style="text-indent: 40px"><font face="Microsoft YaHei UI Light">Life has changed 
 rapidly as time flies by, but it also witnesses the growth of me as well as 
 those fellows. In the Information Era, there are great deals of challenges to 
 keep pace with, while the initial dreams are still well worth sticking to. </font></p>
-<p align="left" style="text-indent: 40px"><font face="等线 Light">Now I am in 
+<p align="left" style="text-indent: 40px"><font face="Microsoft YaHei UI Light">Now I am in 
 IIIS50, a class with excellent students around me. Struggles as there are, I 
 feel it as the dreamland I have always looked forward to. In the busy life here, 
 I wish that I would gain more enchanting knowledge and improve myself towards a 
 new level!</font></p>
-<p align="left" style="text-indent: 40px"><font face="等线 Light" color="#0000FF">
+<p align="left" style="text-indent: 40px">
+<font face="Microsoft YaHei UI Light" color="#0000FF">
 Timeline:</font></p>
-<p align="left" style="text-indent: 40px"><font face="等线 Light">[18.0] 
+<p align="left" style="text-indent: 40px"><font face="Microsoft YaHei UI Light">[18.0] 
 2015/08/19: Began to study in Dept. of CST, THU</font></p>
-<p align="left" style="text-indent: 40px"><font face="等线 Light">[17.0] 
+<p align="left" style="text-indent: 40px"><font face="Microsoft YaHei UI Light">[17.0] 
 2016/03/27: Took part in 20th AI Competetion, won 15th place</font></p>
-<p align="left" style="text-indent: 40px"><font face="等线 Light">[19.1] 
+<p align="left" style="text-indent: 40px"><font face="Microsoft YaHei UI Light">[19.1] 
 2016/05/12: Admitted into IIIS</font></p>
-<p align="left" style="text-indent: 40px"><font face="等线 Light">[17.5] 
+<p align="left" style="text-indent: 40px"><font face="Microsoft YaHei UI Light">[17.5] 
 2017/01/20: Took part in MCM 2017 </font></p>
 
-<p align="right">&nbsp;
-<font face="等线 Light" color="#0000FF">[wiku30: Day
+<p align="right"><font face="Microsoft YaHei UI Light">&nbsp;
+</font>
+<font face="Microsoft YaHei UI Light" color="#0000FF">[wiku30: Day
 <script language=javascript>
 var d0=new Date("2013/04/11");
 var now=new Date();
