--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ Timeline:</font></p>
 <p align="left" style="text-indent: 40px"><font face="Microsoft YaHei UI Light">[18.0] 
 2015/08/19: Began to study in Dept. of CST, THU</font></p>
 <p align="left" style="text-indent: 40px"><font face="Microsoft YaHei UI Light">[17.0] 
-2016/03/27: Took part in 20th AI Competetion, won 15th place</font></p>
+2016/03/27: Took part in 20th AI Competition, won 15th place</font></p>
 <p align="left" style="text-indent: 40px"><font face="Microsoft YaHei UI Light">[19.1] 
 2016/05/12: Admitted into IIIS</font></p>
 <p align="left" style="text-indent: 40px"><font face="Microsoft YaHei UI Light">[17.5] 
