--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ Timeline:</font></p>
 2016/05/12: Admitted into IIIS</font></p>
 <p align="left" style="text-indent: 40px"><font face="Microsoft YaHei UI Light">[17.5] 
 2017/01/20: Took part in MCM 2017 </font></p>
-<p align="left" style="text-indent: 40px">¡¡</p>
+<p align="left" style="text-indent: 40px"></p>
 <p align="left" style="text-indent: 40px"><font face="Microsoft YaHei UI Light" color="#0000FF"> To-do list:</font></p>
 
 <p align="left" style="text-indent: 40px">
