--- a/index.html
+++ b/index.html
@@ -7,42 +7,81 @@
 
 <body bgcolor="lavender">
 
-<p align="center"><b><font size="5">wiku30's </font></b><font size="5"><b>
-Homepage</b></font></p>
+<p align="center"><font face="Consolas"><b><font size="5">wiku30's </font></b><font size="5"><b>
+Homepage</b></font></font></p>
 <p align="left" style="text-indent: 40px">
-<font face="Microsoft YaHei UI Light" color="#0000FF">
+<font face="Consolas" color="#0000FF">
 Welcome to my homepage!</font></p>
-<p align="left" style="text-indent: 40px"><font face="Microsoft YaHei UI Light">I am in Tsinghua 
+<p align="left" style="text-indent: 40px"><font face="Consolas">I am in Tsinghua 
 University, but the alias &quot;wiku30&quot; dates back to days of OI in senior high as an 
 MO contestant. It means &quot;winged kuriboh&quot;, a sprite card in the old-fashioned 
 card game Yu-Gi-Oh. More impressively, it is a symbol of those bygone years when 
 I began to develop my interest in computer science, along with those unusual 
 experiences in both groups.</font></p>
-<p align="left" style="text-indent: 40px"><font face="Microsoft YaHei UI Light">Life has changed 
+<p align="left" style="text-indent: 40px"><font face="Consolas">Life has changed 
 rapidly as time flies by, but it also witnesses the growth of me as well as 
 those fellows. In the Information Era, there are great deals of challenges to 
 keep pace with, while the initial dreams are still well worth sticking to. </font></p>
-<p align="left" style="text-indent: 40px"><font face="Microsoft YaHei UI Light">Now I am in 
+<p align="left" style="text-indent: 40px"><font face="Consolas">Now I am in 
 IIIS50, a class with excellent students around me. Struggles as there are, I 
 feel it as the dreamland I have always looked forward to. In the busy life here, 
 I wish that I would gain more enchanting knowledge and improve myself towards a 
 new level!</font></p>
 <p align="left" style="text-indent: 40px">
-<font face="Microsoft YaHei UI Light" color="#0000FF">
+<font face="Consolas" color="#0000FF">
 Timeline:</font></p>
-<p align="left" style="text-indent: 40px"><font face="Microsoft YaHei UI Light">[18.0] 
-2015/08/19: Began to study in Dept. of CST, THU</font></p>
-<p align="left" style="text-indent: 40px"><font face="Microsoft YaHei UI Light">[17.0] 
-2016/03/27: Took part in 20th AI Competition, won 15th place</font></p>
-<p align="left" style="text-indent: 40px"><font face="Microsoft YaHei UI Light">[19.1] 
-2016/05/12: Admitted into IIIS</font></p>
-<p align="left" style="text-indent: 40px"><font face="Microsoft YaHei UI Light">[17.5] 
-2017/01/20: Took part in MCM 2017 </font></p>
+<p align="left" style="text-indent: 40px"><font face="Consolas">2015/08/19: Began to study in Dept. of CST, THU</font></p>
+<p align="left" style="text-indent: 40px"><font face="Consolas">2016/03/27: Took part in 20th AI Competition, won 15th place</font></p>
+<p align="left" style="text-indent: 40px"><font face="Consolas">2016/05/12: Admitted into IIIS</font></p>
+<p align="left" style="text-indent: 40px"><font face="Consolas">2017/01/20: Took part in MCM 2017 </font></p>
+<p align="left" style="text-indent: 40px"><font face="Consolas">2017/09/23: Passed the GRE test</font></p>
+<p align="left" style="text-indent: 40px"><font face="Consolas">2017/12/07: Passed the TOEFL test, English preparation completed</font></p>
 <p align="left" style="text-indent: 40px"></p>
-<p align="left" style="text-indent: 40px"><font face="Microsoft YaHei UI Light" color="#0000FF"> To-do list:</font></p>
+<p align="left" style="text-indent: 40px"><font face="Consolas" color="#0000FF"> To-do list:</font></p>
+
 
 <p align="left" style="text-indent: 40px">
-<font face="Microsoft YaHei UI Light"> <script language=javascript>
+<font face="Consolas"> <script language=javascript>
+var d0=new Date("2018/01/06");
+var now=new Date();
+var delta=Math.ceil((d0-now)/1000/86400);
+if(delta>0)
+{
+document.write("[2018/01/06] ")
+document.write(+delta)
+document.write(" days before the end of the autumn semester")
+}
+</script>  </font></p>
+
+<p align="left" style="text-indent: 40px">
+<font face="Consolas"> <script language=javascript>
+var d0=new Date("2018/01/13");
+var now=new Date();
+var delta=Math.ceil((d0-now)/1000/86400);
+if(delta>0)
+{
+document.write("[2018/01/13] ")
+document.write(+delta)
+document.write(" days before the last final exam of this semester")
+}
+</script>  </font></p>
+
+<p align="left" style="text-indent: 40px">
+<font face="Consolas"> <script language=javascript>
+var d0=new Date("2018/01/21");
+var now=new Date();
+var delta=Math.ceil((d0-now)/1000/86400);
+if(delta>0)
+{
+document.write("[2018/01/21] ")
+document.write(+delta)
+document.write(" days before the winter camp in Australia")
+}
+</script>  </font></p>
+
+
+<p align="left" style="text-indent: 40px">
+<font face="Consolas"> <script language=javascript>
 var d0=new Date("2018/03/04");
 var now=new Date();
 var delta=Math.ceil((d0-now)/1000/86400);
