research interest added

--- a/index.html
+++ b/index.html
@@ -28,6 +28,23 @@ feel it as the dreamland I have always looked forward to. In the busy life here,
 I wish that I would gain more enchanting knowledge and improve myself towards a 
 new level!</font></p>
 <p align="left" style="text-indent: 40px">
+<font face="Consolas" color="#0000FF">Research Interest (tentative):</font></p>
+<p align="left" style="text-indent: 40px">
+<font face="Consolas">I am always determined to do theoretical research in 
+interdisciplinary fields especially associated with mathematics, but not until 
+recent days have I seriously considered about exact research areas. Now I am 
+interested in the general field of <font color="#000080">Algebraic Topology</font>,
+<font color="#000080">Computer Graphics</font> and <font color="#000080">
+Geometry</font>, etc.</font></p>
+<p align="left" style="text-indent: 40px">
+<font face="Consolas">In fact, due to my wide range of interests, it does take 
+some efforts to find out an exact field to work on, as long as they all have an 
+affinity with my mathematical knowledge background. An important (but not 
+unique) aspect that contributed to my decision is my fervor for art and 
+creativity in the area of science.</font></p>
+<p align="left" style="text-indent: 40px">
+<font face="Consolas">This will also be the field of my research in Spring 2018.</font></p>
+<p align="left" style="text-indent: 40px">
 <font face="Consolas" color="#0000FF">
 Timeline:</font></p>
 <p align="left" style="text-indent: 40px"><font face="Consolas">2015/08/19: Began to study in Dept. of CST, THU</font></p>
