--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@ Geometry</font>, etc.</font></p>
 <p align="left" style="text-indent: 40px">
 <font face="Consolas">In fact, due to my wide range of interests, it does take 
 some efforts to find out an exact field to work on, as long as they all have an 
-affinity with my mathematical knowledge background. An important (but not 
-unique) aspect that contributed to my decision is my fervor for art and 
+affinity with my mathematical knowledge background. An important aspect that contributed to my decision is my fervor for art and 
 creativity in the area of science.</font></p>
 <p align="left" style="text-indent: 40px">
 <font face="Consolas">This will also be the field of my research in Spring 2018.</font></p>
@@ -53,6 +52,9 @@ Timeline:</font></p>
 <p align="left" style="text-indent: 40px"><font face="Consolas">2017/01/20: Took part in MCM 2017 </font></p>
 <p align="left" style="text-indent: 40px"><font face="Consolas">2017/09/23: Passed the GRE test</font></p>
 <p align="left" style="text-indent: 40px"><font face="Consolas">2017/12/07: Passed the TOEFL test, English preparation completed</font></p>
+<p align="left" style="text-indent: 40px"><i><font face="Consolas">
+<a href="2017/review2017.html">Annual Review of 2017</a></font></i></p>
+<p align="left" style="text-indent: 40px">¡¡</p>
 <p align="left" style="text-indent: 40px"></p>
 <p align="left" style="text-indent: 40px"><font face="Consolas" color="#0000FF"> To-do list:</font></p>
 
