--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ Timeline:</font></p>
 <p align="left" style="text-indent: 40px"><font face="Consolas">2017/09/23: Passed the GRE test</font></p>
 <p align="left" style="text-indent: 40px"><font face="Consolas">2017/12/07: Passed the TOEFL test, English preparation completed</font></p>
 <p align="left" style="text-indent: 40px"><i><font face="Consolas">
-<a href="2017/review2017.html">Annual Review of 2017</a></font></i></p>
+<a href="2017/review2017.html">Annual Review for 2017</a></font></i></p>
 <p align="left" style="text-indent: 40px">¡¡</p>
 <p align="left" style="text-indent: 40px"></p>
 <p align="left" style="text-indent: 40px"><font face="Consolas" color="#0000FF"> To-do list:</font></p>
