--- a/index.html
+++ b/index.html
@@ -7,17 +7,39 @@
 
 <body bgcolor="lavender">
 
+<p align="left" style="text-indent: 40px">　</p>
+<p align="left" style="text-indent: 40px"></p>
+<p align="left" style="text-indent: 40px"></p>
+<p align="left" style="text-indent: 40px"></p>
+<p align="left" style="text-indent: 40px"></p>
+
+
+
+
+<table border="2" cellpadding="4" cellspacing="4" width="1586" height="1535">
+	<!-- MSTableType="nolayout" -->
+	<tr>
+		<td valign="top" colspan="3" height="140">
+		<!-- MSCellType="ContentHead" -->
+		
 <p align="center"><font face="Consolas"><b><font size="5">wiku30's </font></b><font size="5"><b>
 Homepage</b></font></font></p>
 <p align="left" style="text-indent: 40px">
 <font face="Consolas" color="#0000FF">
 Welcome to my homepage!</font></p>
-<p align="left" style="text-indent: 40px"><font face="Consolas">I am in Tsinghua 
-University, but the alias &quot;wiku30&quot; dates back to days of OI in senior high as an 
-MO contestant. It means &quot;winged kuriboh&quot;, a sprite card in the old-fashioned 
-card game Yu-Gi-Oh. More impressively, it is a symbol of those bygone years when 
-I began to develop my interest in computer science, along with those unusual 
-experiences in both groups.</font></p>
+　</td>
+	</tr>
+	<tr>
+		<td valign="top" rowspan="2" width="658">
+		<!-- MSCellType="ContentBody" -->
+		<p align="left" style="text-indent: 40px"><i>
+<font face="Consolas" color="#0000FF">Bio</font></i></p>
+		<p align="left" style="text-indent: 40px"><font face="Consolas">I am in 
+		Tsinghua University, but the alias &quot;wiku30&quot; dates back to days of OI in 
+		senior high as an MO contestant. It means &quot;winged kuriboh&quot;, a sprite 
+		card in the old-fashioned card game Yu-Gi-Oh. More impressively, it is a 
+		symbol of those bygone years when I began to develop my interest in 
+		computer science, along with those unusual experiences in both groups.</font></p>
 <p align="left" style="text-indent: 40px"><font face="Consolas">Life has changed 
 rapidly as time flies by, but it also witnesses the growth of me as well as 
 those fellows. In the Information Era, there are great deals of challenges to 
@@ -27,8 +49,17 @@ IIIS50, a class with excellent students around me. Struggles as there are, I
 feel it as the dreamland I have always looked forward to. In the busy life here, 
 I wish that I would gain more enchanting knowledge and improve myself towards a 
 new level!</font></p>
-<p align="left" style="text-indent: 40px">
-<font face="Consolas" color="#0000FF">Research Interest (tentative):</font></p>
+　</td>
+		<td valign="top">
+		<p style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">
+		Blog</font></i></p>
+		<p style="text-indent: 40px"><font face="Consolas">
+		<a href="2017/review2017.html"><font color="#8080FF">Annual Review for 2017</font></a></font></td>
+		<td valign="top" height="415">
+		<!-- MSCellType="NavBody" -->
+		<p align="left" style="text-indent: 40px">
+<i>
+<font face="Consolas" color="#0000FF">Research Interest (tentative)</font></i></p>
 <p align="left" style="text-indent: 40px">
 <font face="Consolas">I am always determined to do theoretical research in 
 interdisciplinary fields especially associated with mathematics, but not until 
@@ -37,32 +68,67 @@ interested in the general field of <font color="#000080">Algebraic Topology</fon
 <font color="#000080">Computer Graphics</font> and <font color="#000080">
 Geometry</font>, etc.</font></p>
 <p align="left" style="text-indent: 40px">
-<font face="Consolas">In fact, due to my wide range of interests, it does take 
-some efforts to find out an exact field to work on, as long as they all have an 
-affinity with my mathematical knowledge background. An important aspect that contributed to my decision is my fervor for art and 
-creativity in the area of science.</font></p>
-<p align="left" style="text-indent: 40px">
 <font face="Consolas">This will also be the field of my research in Spring 2018.</font></p>
+　</td>
+	</tr>
+	<tr>
+		<td width="334">　</td>
+		<td height="279" valign="top">
+		<p align="left" style="text-indent: 40px">
+<i><font face="Consolas" color="#0000FF">Hobbies in Life</font></i></p>
 <p align="left" style="text-indent: 40px">
+<font face="Consolas">Programming</font></p>
+		<p align="left" style="text-indent: 40px">
+<font face="Consolas">Photography <font color="#8080FF">[See Album]</font></font></p>
+		<p align="left" style="text-indent: 40px">
+<font face="Consolas">Writing</font></p>
+		<p align="left" style="text-indent: 40px">
+<font face="Consolas">Singing</font></p>　</td>
+	</tr>
+	<tr>
+		<td valign="top" colspan="2" rowspan="2">
+<p align="left" style="text-indent: 40px">
+<i>
 <font face="Consolas" color="#0000FF">
-Timeline:</font></p>
+Timeline:</font></i></p>
+<p align="left" style="text-indent: 40px"><font face="Consolas">2013/04/11: 
+Began to use the ID &quot;wiku30&quot;</font></p>
 <p align="left" style="text-indent: 40px"><font face="Consolas">2015/08/19: Began to study in Dept. of CST, THU</font></p>
 <p align="left" style="text-indent: 40px"><font face="Consolas">2016/03/27: Took part in 20th AI Competition, won 15th place</font></p>
 <p align="left" style="text-indent: 40px"><font face="Consolas">2016/05/12: Admitted into IIIS</font></p>
 <p align="left" style="text-indent: 40px"><font face="Consolas">2017/01/20: Took part in MCM 2017 </font></p>
 <p align="left" style="text-indent: 40px"><font face="Consolas">2017/09/23: Passed the GRE test</font></p>
 <p align="left" style="text-indent: 40px"><font face="Consolas">2017/12/07: Passed the TOEFL test, English preparation completed</font></p>
-<p align="left" style="text-indent: 40px"><i><font face="Consolas">
-<a href="2017/review2017.html">Annual Review for 2017</a></font></i></p>
-<p align="left" style="text-indent: 40px"></p>
-<p align="left" style="text-indent: 40px"></p>
-<p align="left" style="text-indent: 40px"></p>
-<p align="left" style="text-indent: 40px"></p>
-<p align="left" style="text-indent: 40px"><font face="Consolas" color="#0000FF"> To-do list:</font></p>
+		<p>　</td>
+		<td height="202" valign="top">
+		
+		
+		<p align="left" style="text-indent: 40px">
+<i><font face="Consolas" color="#0000FF">Contacts</font></i></p>
+		<p align="left" style="text-indent: 40px">
+<font face="Consolas">zzs15 [at] mails.tsinghua.edu.cn</font></p>
+		<p align="left" style="text-indent: 40px">
+<font face="Consolas">wingedkuriboh [at] 126.com</font></p>
+		<p align="left" style="text-indent: 40px">
+<font face="Consolas"><a href="http://www.github.com/wiku30">
+<font color="#8080FF">http://www.github.com/wiku30</font></a></font></p></td>
+	</tr>
+	<tr>
+		<td height="206">　</td>
+	</tr>
+	<tr>
+		<td valign="top" colspan="2">
+		<!-- MSCellType="ContentFoot" -->
+		<p align="left" style="text-indent: 40px">
+<i>
+<font face="Consolas" color="#0000FF"> To-do list:</font>
 
+</i>
 
 <p align="left" style="text-indent: 40px">
-<font face="Consolas"> <script language=javascript>
+<font face="Consolas">
+
+<script language=javascript>
 var d0=new Date("2018/01/06");
 var now=new Date();
 var delta=Math.ceil((d0-now)/1000/86400);
@@ -112,7 +178,13 @@ document.write("[2018/03/04] ")
 document.write(+delta)
 document.write(" days before the exchange program in U.T. Austin")
 }
-</script>  </font></p>
+</script>  </font>
+		
+		</td>
+		
+		<td height="261" width="544">　</td>
+	</tr>
+</table>
 
 </body>
 
