--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
+<meta charset = "gb2312">
 <title>wiku30's blog</title>
 </head>
 
