--- a/album/index.html
+++ b/album/index.html
@@ -1,29 +1,26 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title> --- wiku30's blog</title>
+<meta http-equiv="Content-Language" content="zh-cn">
+<meta charset = "utf-8">
+<title>Photo Album --- wiku30's Blog</title>
 </head>
 
 <body bgcolor="lavender">
 
+<p align="center"><b><i><font face="Calibri Light" size="6">Photo Album</font></i></b>
 
 
-<p align="center"><i><b><font face="Calibri Light" size="6"> <span lang="en-us">
-Photo Album</span> </font>
-</b></i></p>
-<p align="right">　</p>
+
+
 <p align="right"><font face="Calibri Light" style="font-size: 15pt">  
 <span lang="en-us">
-<a href="/index.html">Back to Homepage</a></span></font></p>
-			
+<a href="/index.html"><font color="#0080FF">Back to Homepage</font></a></span></font></p>
 
-
-<blockquote>
 	<p align="left"><span lang="en-us">
-	<font face="Calibri Light" style="font-size: 15pt">To be constructed...</font></span></p>
-</blockquote>
-			
+	<font face="Calibri Light" style="font-size: 15pt">&nbsp;&nbsp;&nbsp; To be constructed...</font></span></p>
+
+
 
 
 </body>
