--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <html>
 
 <head>
-<meta charset = "gb2312">
-<title>wiku30's blog</title>
+<meta charset = "utf-8">
+<title>wiku30's Blog</title>
+<meta name="charset" content="&quot;utf-8&quot;">
 </head>
 
 <body bgcolor="lavender">
 
-<p align="left" style="text-indent: 40px">　</p>
+<p align="left" style="text-indent: 40px"></p>
 <p align="left" style="text-indent: 40px"></p>
 <p align="left" style="text-indent: 40px"></p>
 <p align="left" style="text-indent: 40px"></p>
@@ -27,7 +28,7 @@ Homepage</b></font></font></p>
 <p align="left" style="text-indent: 40px">
 <font face="Consolas" color="#0000FF">
 Welcome to my homepage!</font></p>
-　</td>
+		</td>
 	</tr>
 	<tr>
 		<td valign="top" rowspan="2" width="658">
@@ -49,7 +50,7 @@ IIIS50, a class with excellent students around me. Struggles as there are, I
 feel it as the dreamland I have always looked forward to. In the busy life here, 
 I wish that I would gain more enchanting knowledge and improve myself towards a 
 new level!</font></p>
-　</td>
+		</td>
 		<td valign="top">
 		<p style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">
 		Blog</font></i></p>
@@ -68,8 +69,7 @@ interested in the general field of <font color="#000080">Algebraic Topology</fon
 <font color="#000080">Computer Graphics</font> and <font color="#000080">
 Geometry</font>, etc.</font></p>
 <p align="left" style="text-indent: 40px">
-<font face="Consolas">This will also be the field of my research in Spring 2018.</font></p>
-　</td>
+<font face="Consolas">This will also be the field of my research in Spring 2018.</font></p></td>
 	</tr>
 	<tr>
 		<td width="334">　</td>
@@ -83,7 +83,7 @@ Geometry</font>, etc.</font></p>
 		<p align="left" style="text-indent: 40px">
 <font face="Consolas">Writing</font></p>
 		<p align="left" style="text-indent: 40px">
-<font face="Consolas">Singing</font></p>　</td>
+<font face="Consolas">Singing</font></p></td>
 	</tr>
 	<tr>
 		<td valign="top" colspan="2" rowspan="2">
@@ -99,7 +99,7 @@ Began to use the ID &quot;wiku30&quot;</font></p>
 <p align="left" style="text-indent: 40px"><font face="Consolas">2017/01/20: Took part in MCM 2017 </font></p>
 <p align="left" style="text-indent: 40px"><font face="Consolas">2017/09/23: Passed the GRE test</font></p>
 <p align="left" style="text-indent: 40px"><font face="Consolas">2017/12/07: Passed the TOEFL test, English preparation completed</font></p>
-		<p>　</td>
+		</td>
 		<td height="202" valign="top">
 		
 		
