--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
 
 
 
-<table border="2" cellpadding="4" cellspacing="4" width="1586" height="1535">
+<table border="1" cellpadding="4" cellspacing="4" width="100%" height="100%" bordercolorlight="#00FFFF" bordercolordark="#000080" bordercolor="#00FFFF">
 	<!-- MSTableType="nolayout" -->
 	<tr>
-		<td valign="top" colspan="3" height="140">
+		<td valign="top" colspan="3">
 		<!-- MSCellType="ContentHead" -->
 		
-<p align="center"><font face="Consolas"><b><font size="5">wiku30's </font></b><font size="5"><b>
+<p align="center"><font face="Calibri Light" color="#808080"><b><font size="6">wiku30's </font></b>
+<font size="6"><b>
 Homepage</b></font></font></p>
 <p align="left" style="text-indent: 40px">
 <font face="Consolas" color="#0000FF">
@@ -31,7 +32,7 @@ Welcome to my homepage!</font></p>
 		</td>
 	</tr>
 	<tr>
-		<td valign="top" rowspan="2" width="658">
+		<td valign="top" rowspan="2" width="43%">
 		<!-- MSCellType="ContentBody" -->
 		<p align="left" style="text-indent: 40px"><i>
 <font face="Consolas" color="#0000FF">Bio</font></i></p>
@@ -56,7 +57,7 @@ new level!</font></p>
 		Blog</font></i></p>
 		<p style="text-indent: 40px"><font face="Consolas">
 		<a href="2017/review2017.html"><font color="#8080FF">Annual Review for 2017</font></a></font></td>
-		<td valign="top" height="415">
+		<td valign="top">
 		<!-- MSCellType="NavBody" -->
 		<p align="left" style="text-indent: 40px">
 <i>
@@ -72,21 +73,29 @@ Geometry</font>, etc.</font></p>
 <font face="Consolas">This will also be the field of my research in Spring 2018.</font></p></td>
 	</tr>
 	<tr>
-		<td width="334">¡¡</td>
-		<td height="279" valign="top">
+		<td width="25%" valign="top">
+		<p style="margin-top: 0; margin-bottom: 0">
+		<font face="Consolas" size="1">&nbsp;&nbsp;&nbsp; </font></p>
+		<p style="margin-top: 0; margin-bottom: 0">
+		<font face="Consolas" size="1">&nbsp;&nbsp;&nbsp; </font><i>
+		<font face="Consolas" color="#0000FF">&nbsp;</font></i></td>
+		<td  valign="top">
 		<p align="left" style="text-indent: 40px">
 <i><font face="Consolas" color="#0000FF">Hobbies in Life</font></i></p>
 <p align="left" style="text-indent: 40px">
 <font face="Consolas">Programming</font></p>
 		<p align="left" style="text-indent: 40px">
-<font face="Consolas">Photography <font color="#8080FF">[See Album]</font></font></p>
+<font face="Consolas">Photography <font color="#8080FF"><a href="album/">
+<font color="#8080FF">[See Album]</font></a></font></font></p>
 		<p align="left" style="text-indent: 40px">
 <font face="Consolas">Writing</font></p>
 		<p align="left" style="text-indent: 40px">
-<font face="Consolas">Singing</font></p></td>
+<font face="Consolas">Singing</font></p>
+		<p align="left" style="text-indent: 40px">
+<font face="Consolas">&nbsp;</font></p></td>
 	</tr>
 	<tr>
-		<td valign="top" colspan="2" rowspan="2">
+		<td valign="top" colspan="2">
 <p align="left" style="text-indent: 40px">
 <i>
 <font face="Consolas" color="#0000FF">
@@ -100,21 +109,39 @@ Began to use the ID &quot;wiku30&quot;</font></p>
 <p align="left" style="text-indent: 40px"><font face="Consolas">2017/09/23: Passed the GRE test</font></p>
 <p align="left" style="text-indent: 40px"><font face="Consolas">2017/12/07: Passed the TOEFL test, English preparation completed</font></p>
 		</td>
-		<td height="202" valign="top">
+		<td  valign="top" rowspan="2">
 		
 		
 		<p align="left" style="text-indent: 40px">
-<i><font face="Consolas" color="#0000FF">Contacts</font></i></p>
+<i><font face="Consolas" color="#0000FF">Contacts:</font></i></p>
 		<p align="left" style="text-indent: 40px">
 <font face="Consolas">zzs15 [at] mails.tsinghua.edu.cn</font></p>
 		<p align="left" style="text-indent: 40px">
 <font face="Consolas">wingedkuriboh [at] 126.com</font></p>
 		<p align="left" style="text-indent: 40px">
 <font face="Consolas"><a href="http://www.github.com/wiku30">
-<font color="#8080FF">http://www.github.com/wiku30</font></a></font></p></td>
-	</tr>
-	<tr>
-		<td height="206">¡¡</td>
+<font color="#8080FF">http://www.github.com/wiku30</font></a></font></p>
+		<p align="left" style="text-indent: 40px">
+<font face="Consolas" color="#8080FF">&nbsp;</font></p>
+		<p align="left" style="text-indent: 40px">
+<i><font face="Consolas" color="#0000FF">Friendly links:</font></i></p>
+		<p align="left" style="text-indent: 40px">
+<font face="Consolas" color="#000080"><a href="https://heli-lab.github.io/">
+<font color="#8080FF">@Helium</font></a></font><font face="Consolas" color="#8080FF">(on 
+construction)</font></p>
+		<p align="left" style="text-indent: 40px">
+<font face="Consolas" color="#000080"><a href="https://benpigchu.com/">
+<font color="#8080FF">@BenPigChu</font></a></font></p>
+		<p align="left" style="text-indent: 40px">
+<font face="Consolas" color="#000080"><a href="https://benpigchu.com/">
+<font color="#8080FF">@</font></a></font><a href="https://dailinsubjam.github.io/"><font face="Consolas" color="#8080FF">dailinsubjam</font></a></p>
+		<p align="left" style="text-indent: 40px">
+<font face="Consolas" color="#000080"><a href="https://ejq.me/">
+<font color="#8080FF">@ejq</font></a></font></p>
+		<p align="left" style="text-indent: 40px">
+<font face="Consolas" color="#000080">
+<a href="https://ejq.me/" style="text-decoration: none"><font color="#E6E6FA"></font></a></font>
+<a href="https://github.com/wanghy012"><font face="Consolas" color="#E6E6FA">@why</font></a></p></td>
 	</tr>
 	<tr>
 		<td valign="top" colspan="2">
@@ -182,7 +209,6 @@ document.write(" days before the exchange program in U.T. Austin")
 		
 		</td>
 		
-		<td height="261" width="544">¡¡</td>
 	</tr>
 </table>
 
