--- a/index.html
+++ b/index.html
@@ -156,14 +156,14 @@ construction)</font></p>
 <font face="Consolas">
 
 <script language=javascript>
-var d0=new Date("2018/01/06");
+var d0=new Date("2018/01/04");
 var now=new Date();
 var delta=Math.ceil((d0-now)/1000/86400);
 if(delta>0)
 {
-document.write("[2018/01/06] ")
+document.write("[2018/01/04] ")
 document.write(+delta)
-document.write(" days before the end of the autumn semester")
+document.write(" days before the end of classes in the autumn semester")
 }
 </script>  </font></p>
 
@@ -196,12 +196,12 @@ document.write(" days before the winter camp in Australia")
 
 <p align="left" style="text-indent: 40px">
 <font face="Consolas"> <script language=javascript>
-var d0=new Date("2018/03/04");
+var d0=new Date("2018/03/03");
 var now=new Date();
 var delta=Math.ceil((d0-now)/1000/86400);
 if(delta>0)
 {
-document.write("[2018/03/04] ")
+document.write("[2018/03/03] ")
 document.write(+delta)
 document.write(" days before the exchange program in U.T. Austin")
 }
