--- a/index.html
+++ b/index.html
@@ -56,7 +56,10 @@ new level!</font></p>
 		<p style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">
 		Blog</font></i></p>
 		<p style="text-indent: 40px"><font face="Consolas">
-		<a href="2017/review2017.html"><font color="#8080FF">Annual Review for 2017</font></a></font></td>
+		<a href="2017/review2017.html"><font color="#8080FF">Annual Review for 2017</font></a></font><p style="text-indent: 40px">
+		<font face="Consolas" color="#8080FF">
+		<a href="https://github.com/wiku30/myblog/issues"><font color="#8080FF">Issue-Based Simple 
+		Blog</font></a></font></td>
 		<td valign="top">
 		<!-- MSCellType="NavBody" -->
 		<p align="left" style="text-indent: 40px">
@@ -66,11 +69,10 @@ new level!</font></p>
 <font face="Consolas">I am always determined to do theoretical research in 
 interdisciplinary fields especially associated with mathematics, but not until 
 recent days have I seriously considered about exact research areas. Now I am 
-interested in the general field of <font color="#000080">Algebraic Topology</font>,
-<font color="#000080">Computer Graphics</font> and <font color="#000080">
-Geometry</font>, etc.</font></p>
+interested in the field of<font color="#000080"> Topological Data 
+Analysis.</font></font></p>
 <p align="left" style="text-indent: 40px">
-<font face="Consolas">This will also be the field of my research in Spring 2018.</font></p></td>
+<font face="Consolas">This is also the field of my research in Spring 2018.</font></p></td>
 	</tr>
 	<tr>
 		<td width="25%" valign="top">
@@ -86,13 +88,15 @@ Geometry</font>, etc.</font></p>
 <font face="Consolas">Programming</font></p>
 		<p align="left" style="text-indent: 40px">
 <font face="Consolas">Photography <font color="#8080FF"><a href="album/">
-<font color="#8080FF">[See Album]</font></a></font></font></p>
+<font color="#8080FF">[Album(on construction)]</font></a></font></font></p>
 		<p align="left" style="text-indent: 40px">
 <font face="Consolas">Writing</font></p>
 		<p align="left" style="text-indent: 40px">
 <font face="Consolas">Singing</font></p>
 		<p align="left" style="text-indent: 40px">
-<font face="Consolas">&nbsp;</font></p></td>
+<font face="Consolas" size="1" color="#E6E6FA">E-sports (LOL): AP Ezreal, Vayne, 
+Tristana</font></p>
+		</td>
 	</tr>
 	<tr>
 		<td valign="top" colspan="2">
@@ -105,9 +109,13 @@ Began to use the ID &quot;wiku30&quot;</font></p>
 <p align="left" style="text-indent: 40px"><font face="Consolas">2015/08/19: Began to study in Dept. of CST, THU</font></p>
 <p align="left" style="text-indent: 40px"><font face="Consolas">2016/03/27: Took part in 20th AI Competition, won 15th place</font></p>
 <p align="left" style="text-indent: 40px"><font face="Consolas">2016/05/12: Admitted into IIIS</font></p>
-<p align="left" style="text-indent: 40px"><font face="Consolas">2017/01/20: Took part in MCM 2017 </font></p>
+<p align="left" style="text-indent: 40px"><font face="Consolas">2017/01/20: Took part in MCM 2017 
+(But got no prize <font color="#0000FF">:&lt;</font> )</font></p>
 <p align="left" style="text-indent: 40px"><font face="Consolas">2017/09/23: Passed the GRE test</font></p>
 <p align="left" style="text-indent: 40px"><font face="Consolas">2017/12/07: Passed the TOEFL test, English preparation completed</font></p>
+<p align="left" style="text-indent: 40px"><font face="Consolas">2018/01/26: The symbol &quot;wiku30&quot; is now well-defined</font></p>
+<p align="left" style="text-indent: 40px"><font face="Consolas">2018/03/04: 
+Began the exchange program (Although still in Tsinghua now)</font></p>
 		</td>
 		<td  valign="top" rowspan="2">
 		
@@ -138,10 +146,7 @@ construction)</font></p>
 		<p align="left" style="text-indent: 40px">
 <font face="Consolas" color="#000080"><a href="https://ejq.me/">
 <font color="#8080FF">@ejq</font></a></font></p>
-		<p align="left" style="text-indent: 40px">
-<font face="Consolas" color="#000080">
-<a href="https://ejq.me/" style="text-decoration: none"><font color="#E6E6FA"></font></a></font>
-<a href="https://github.com/wanghy012"><font face="Consolas" color="#E6E6FA">@why</font></a></p></td>
+		</td>
 	</tr>
 	<tr>
 		<td valign="top" colspan="2">
@@ -152,65 +157,54 @@ construction)</font></p>
 
 </i>
 
-<p align="left" style="text-indent: 40px">
-<font face="Consolas">
-
-<script language=javascript>
-var d0=new Date("2018/01/04");
-var now=new Date();
-var delta=Math.ceil((d0-now)/1000/86400);
-if(delta>0)
-{
-document.write("[2018/01/04] ")
-document.write(+delta)
-document.write(" days before the end of classes in the autumn semester")
-}
-</script>  </font></p>
-
-<p align="left" style="text-indent: 40px">
-<font face="Consolas"> <script language=javascript>
-var d0=new Date("2018/01/13");
-var now=new Date();
-var delta=Math.ceil((d0-now)/1000/86400);
-if(delta>0)
-{
-document.write("[2018/01/13] ")
-document.write(+delta)
-document.write(" days before the last final exam of this semester")
-}
-</script>  </font></p>
-
-<p align="left" style="text-indent: 40px">
-<font face="Consolas"> <script language=javascript>
-var d0=new Date("2018/01/21");
-var now=new Date();
-var delta=Math.ceil((d0-now)/1000/86400);
-if(delta>0)
-{
-document.write("[2018/01/21] ")
-document.write(+delta)
-document.write(" days before the winter camp in Australia")
-}
-</script>  </font></p>
 
 
 <p align="left" style="text-indent: 40px">
 <font face="Consolas"> <script language=javascript>
-var d0=new Date("2018/03/03");
+var d0=new Date("2018/08/31");
 var now=new Date();
 var delta=Math.ceil((d0-now)/1000/86400);
 if(delta>0)
 {
-document.write("[2018/03/03] ")
+document.write("[2018/08/31] ")
 document.write(+delta)
-document.write(" days before the exchange program in U.T. Austin")
+document.write(" days left for the exchange program in U.T. Austin")
 }
-</script>  </font>
+</script>  </font> </p>
+
+
+<p align="left" style="text-indent: 40px">
+<font face="Consolas"> <script language=javascript>
+var d0=new Date("2018/11/15  ");
+var now=new Date();
+var delta=Math.ceil((d0-now)/1000/86400);
+if(delta>0)
+{
+document.write("[2018/11/15] ~")
+document.write(+delta)
+document.write(" days left for PhD applications")
+}
+</script>  </font> </p>
+
+<p align="left" style="text-indent: 40px">
+<font face="Consolas"> <script language=javascript>
+var d0=new Date("2019/06/31");
+var now=new Date();
+var delta=Math.ceil((d0-now)/1000/86400);
+if(delta>0)
+{
+document.write("[2019/06/31] ~")
+document.write(+delta)
+document.write(" days left for \"Wish: Aery\"")
+}
+</script>  </font> </p>
 		
 		</td>
 		
 	</tr>
 </table>
+
+<p align="right"><font color="#0000FF"><i>Updated on 2018-03-19</i></font></p>
 
 </body>
 
