planned departure added

--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@ recent days have I seriously considered about exact research areas. Now I am
 interested in the field of<font color="#000080"> Topological Data 
 Analysis.</font></font></p>
 <p align="left" style="text-indent: 40px">
-<font face="Consolas">This is also the field of my research in Spring 2018.</font></p></td>
+<font face="Consolas">This is also the field of my research in Spring 2018 as an 
+student intern at UT Austin.</font></p></td>
 	</tr>
 	<tr>
 		<td width="25%" valign="top">
@@ -157,7 +158,18 @@ construction)</font></p>
 
 </i>
 
-
+<p align="left" style="text-indent: 40px">
+<font face="Consolas"> <script language=javascript>
+var d0=new Date("2018/04/21");
+var now=new Date();
+var delta=Math.ceil((d0-now)/1000/86400);
+if(delta>0)
+{
+document.write("[2018/04/21] ")
+document.write(+delta)
+document.write(" days before the planned departure to UT Austin")
+}
+</script>  </font> </p>
 
 <p align="left" style="text-indent: 40px">
 <font face="Consolas"> <script language=javascript>
@@ -168,7 +180,7 @@ if(delta>0)
 {
 document.write("[2018/08/31] ")
 document.write(+delta)
-document.write(" days left for the exchange program in U.T. Austin")
+document.write(" days left for the exchange program in UT Austin")
 }
 </script>  </font> </p>
 
@@ -204,7 +216,7 @@ document.write(" days left for \"Wish: Aery\"")
 	</tr>
 </table>
 
-<p align="right"><font color="#0000FF"><i>Updated on 2018-03-19</i></font></p>
+<p align="right"><font color="#0000FF"><i>Updated on 2018-04-03</i></font></p>
 
 </body>
 
