--- a/index.html
+++ b/index.html
@@ -160,16 +160,43 @@ construction)</font></p>
 
 <p align="left" style="text-indent: 40px">
 <font face="Consolas"> <script language=javascript>
-var d0=new Date("2018/04/21");
+var d0=new Date("2018/04/20");
 var now=new Date();
 var delta=Math.ceil((d0-now)/1000/86400);
 if(delta>0)
 {
-document.write("[2018/04/21] ")
+document.write("[2018/04/20] ")
 document.write(+delta)
 document.write(" days before the planned departure to UT Austin")
 }
 </script>  </font> </p>
+
+<p align="left" style="text-indent: 40px">
+<font face="Consolas"> <script language=javascript>
+var d0=new Date("2018/05/01");
+var now=new Date();
+var delta=Math.ceil((d0-now)/1000/86400);
+if(delta>0)
+{
+document.write("[2018/05/01] ")
+document.write(+delta)
+document.write(" days before the project presentation at UT")
+}
+</script>  </font> </p>
+
+<p align="left" style="text-indent: 40px">
+<font face="Consolas"> <script language=javascript>
+var d0=new Date("2018/05/31");
+var now=new Date();
+var delta=Math.ceil((d0-now)/1000/86400);
+if(delta>0)
+{
+document.write("[2018/05/31] ")
+document.write(+delta)
+document.write(" days before the deadline of NIPS 2018")
+}
+</script>  </font> </p>
+
 
 <p align="left" style="text-indent: 40px">
 <font face="Consolas"> <script language=javascript>
