--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ Welcome to my homepage!</font></p>
 		</td>
 	</tr>
 	<tr>
-		<td valign="top" rowspan="2" width="43%">
+		<td valign="top" rowspan="2" width="42%">
 		<!-- MSCellType="ContentBody" -->
 		<p align="left" style="text-indent: 40px"><i>
 <font face="Consolas" color="#0000FF">Bio</font></i></p>
@@ -59,8 +59,11 @@ new level!</font></p>
 		<a href="2017/review2017.html"><font color="#8080FF">Annual Review for 2017</font></a></font><p style="text-indent: 40px">
 		<font face="Consolas" color="#8080FF">
 		<a href="https://github.com/wiku30/myblog/issues"><font color="#8080FF">Issue-Based Simple 
-		Blog</font></a></font></td>
-		<td valign="top">
+		Blog</font></a></font><p style="text-indent: 40px">
+		<span lang="en-us"><font face="Consolas" color="#8080FF">
+		<a href="https://etherscan.io/address/0xad9eea04a6dea41acaf36617b6bef847591eecef">
+		<font color="#8080FF">Blockchain Blog on ETH</font></a></font></span></td>
+		<td valign="top" width="35%">
 		<!-- MSCellType="NavBody" -->
 		<p align="left" style="text-indent: 40px">
 <i>
@@ -76,13 +79,13 @@ Analysis.</font></font></p>
 student intern at UT Austin.</font></p></td>
 	</tr>
 	<tr>
-		<td width="25%" valign="top">
+		<td width="20%" valign="top">
 		<p style="margin-top: 0; margin-bottom: 0">
 		<font face="Consolas" size="1">&nbsp;&nbsp;&nbsp; </font></p>
 		<p style="margin-top: 0; margin-bottom: 0">
 		<font face="Consolas" size="1">&nbsp;&nbsp;&nbsp; </font><i>
 		<font face="Consolas" color="#0000FF">&nbsp;</font></i></td>
-		<td  valign="top">
+		<td  valign="top" width="35%">
 		<p align="left" style="text-indent: 40px">
 <i><font face="Consolas" color="#0000FF">Hobbies in Life</font></i></p>
 <p align="left" style="text-indent: 40px">
@@ -114,11 +117,12 @@ Began to use the ID &quot;wiku30&quot;</font></p>
 (But got no prize <font color="#0000FF">:&lt;</font> )</font></p>
 <p align="left" style="text-indent: 40px"><font face="Consolas">2017/09/23: Passed the GRE test</font></p>
 <p align="left" style="text-indent: 40px"><font face="Consolas">2017/12/07: Passed the TOEFL test, English preparation completed</font></p>
-<p align="left" style="text-indent: 40px"><font face="Consolas">2018/01/26: The symbol &quot;wiku30&quot; is now well-defined</font></p>
 <p align="left" style="text-indent: 40px"><font face="Consolas">2018/03/04: 
-Began the exchange program (Although still in Tsinghua now)</font></p>
+Began the exchange program</font></p>
+<p align="left" style="text-indent: 40px"><font face="Consolas">2018/04/20<span lang="en-us">: 
+Arrived at UT Austin</span></font></p>
 		</td>
-		<td  valign="top" rowspan="2">
+		<td  valign="top" rowspan="2" width="35%">
 		
 		
 		<p align="left" style="text-indent: 40px">
@@ -147,6 +151,15 @@ construction)</font></p>
 		<p align="left" style="text-indent: 40px">
 <font face="Consolas" color="#000080"><a href="https://ejq.me/">
 <font color="#8080FF">@ejq</font></a></font></p>
+		<p align="left" style="text-indent: 40px">
+<span lang="en-us">&nbsp;</span></p>
+		<p align="left" style="text-indent: 40px">
+<i><span lang="en-us"><font face="Consolas" color="#0000FF">Addresses of 
+cryptocurrencies:</font></span></i></p>
+		<p align="left" style="text-indent: 40px">
+<span lang="en-us"><font face="Consolas" color="#0000FF">BTC:</font><font face="Consolas">1wikuAXufnJEiNjbfiaQvjQjWANhNNz88</font></span></p>
+		<p align="left" style="text-indent: 40px">
+<span lang="en-us"><font face="Consolas" color="#0000FF">ETH:</font><font face="Consolas">0xAd9eEA04A6deA41acaF36617b6BEf847591EeCeF</font></span></p>
 		</td>
 	</tr>
 	<tr>
@@ -243,7 +256,7 @@ document.write(" days left for \"Wish: Aery\"")
 	</tr>
 </table>
 
-<p align="right"><font color="#0000FF"><i>Updated on 2018-04-03</i></font></p>
+<p align="right"><font color="#0000FF"><i>Updated on 2018-0<span lang="en-us">6</span>-0</i></font><span lang="en-us"><font color="#0000FF"><i>9</i></font></span></p>
 
 </body>
 
