--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ construction)</font></p>
 <font color="#8080FF">@BenPigChu</font></a></font></p>
 		<p align="left" style="text-indent: 40px">
 <font face="Consolas" color="#000080"><a href="https://benpigchu.com/">
-<font color="#8080FF">@</font></a></font><a href="https://dailinsubjam.github.io/"><font face="Consolas" color="#8080FF">dailinsubjam</font></a></p>
+<font color="#8080FF"></font></a></font><a href="https://www.researchgate.net/profile/Cong_Yue_Deng/"><font face="Consolas" color="#8080FF">@FlyingGiraffe</font></a></p>
 		<p align="left" style="text-indent: 40px">
 <font face="Consolas" color="#000080"><a href="https://ejq.me/">
 <font color="#8080FF">@ejq</font></a></font></p>
@@ -171,59 +171,6 @@ cryptocurrencies:</font></span></i></p>
 
 </i>
 
-<p align="left" style="text-indent: 40px">
-<font face="Consolas"> <script language=javascript>
-var d0=new Date("2018/04/20");
-var now=new Date();
-var delta=Math.ceil((d0-now)/1000/86400);
-if(delta>0)
-{
-document.write("[2018/04/20] ")
-document.write(+delta)
-document.write(" days before the planned departure to UT Austin")
-}
-</script>  </font> </p>
-
-<p align="left" style="text-indent: 40px">
-<font face="Consolas"> <script language=javascript>
-var d0=new Date("2018/05/01");
-var now=new Date();
-var delta=Math.ceil((d0-now)/1000/86400);
-if(delta>0)
-{
-document.write("[2018/05/01] ")
-document.write(+delta)
-document.write(" days before the project presentation at UT")
-}
-</script>  </font> </p>
-
-<p align="left" style="text-indent: 40px">
-<font face="Consolas"> <script language=javascript>
-var d0=new Date("2018/05/31");
-var now=new Date();
-var delta=Math.ceil((d0-now)/1000/86400);
-if(delta>0)
-{
-document.write("[2018/05/31] ")
-document.write(+delta)
-document.write(" days before the deadline of NIPS 2018")
-}
-</script>  </font> </p>
-
-
-<p align="left" style="text-indent: 40px">
-<font face="Consolas"> <script language=javascript>
-var d0=new Date("2018/08/31");
-var now=new Date();
-var delta=Math.ceil((d0-now)/1000/86400);
-if(delta>0)
-{
-document.write("[2018/08/31] ")
-document.write(+delta)
-document.write(" days left for the exchange program in UT Austin")
-}
-</script>  </font> </p>
-
 
 <p align="left" style="text-indent: 40px">
 <font face="Consolas"> <script language=javascript>
@@ -238,25 +185,10 @@ document.write(" days left for PhD applications")
 }
 </script>  </font> </p>
 
-<p align="left" style="text-indent: 40px">
-<font face="Consolas"> <script language=javascript>
-var d0=new Date("2019/06/31");
-var now=new Date();
-var delta=Math.ceil((d0-now)/1000/86400);
-if(delta>0)
-{
-document.write("[2019/06/31] ~")
-document.write(+delta)
-document.write(" days left for \"Wish: Aery\"")
-}
-</script>  </font> </p>
-		
-		</td>
-		
-	</tr>
+
 </table>
 
-<p align="right"><font color="#0000FF"><i>Updated on 2018-0<span lang="en-us">6</span>-0</i></font><span lang="en-us"><font color="#0000FF"><i>9</i></font></span></p>
+<p align="right"><font color="#0000FF"><i>Updated on 2018-09-26</p>
 
 </body>
 
