CV page title updated

--- a/CV/index.html
+++ b/CV/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Language" content="zh-cn">
 <meta charset = "utf-8">
-<title>Template --- wiku30's Blog</title>
+<title>My CV --- wiku30's Blog</title>
 </head>
 
 <body bgcolor="lavender">
