--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body bgcolor="lavender">
 
-<font size="4"> Due to critical hardship I am facing, this blog is temporarily not open. <b>
+<font size="4"> Due to critical hardship I am facing, this blog is temporarily closed. <b> </font>
 
 </body>
 
